--- a/index.html
+++ b/index.html
@@ -325,11 +325,11 @@
                 </div>
             </div>
             <div class="row text-center align-items-top">
-                <div class="col-sm-6">
+                <div class="col-xs-12 col-lg-6 resume">
                   <h4>Check out my resume!</h4>
                   <button class="btn" onclick=" window.open('johnnyjiang-resume.pdf')">Resume</button>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-xs-12 col-lg-6 resume">
                     <h4>Connect with me!</h4>
                     <p>
                         If you have any questions or wish to discuss potential opportunities, 
