--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
-                    <img class="w-100 image" src="images/about.jpg" alt="">
+                    <img class="image" src="images/about.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
                     <p class="intro"><strong>Hello there!</strong> 
@@ -346,7 +346,7 @@
         <div class="container align-items-center justify-content-center">
           <div class="row text-center">
             <div class="col">
-              <h6>Copyright &copy; 2023 JOHNNY JIANG. All rights reserved.</h6>
+              <p>Copyright &copy; 2023 JOHNNY JIANG. All rights reserved.</p>
             </div>
           </div>
         </div>
