Timeline image fit 2

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
-                    <img class="image" src="images/about.jpg" alt="">
+                    <img class="img-fluid" src="images/about.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
                     <p class="intro"><strong>Hello there!</strong> 
@@ -173,7 +173,7 @@
                                     and researched the What-If-Tool for Explainable AI.
                                 </p>
                                 <br>
-                                <img class="image" src="images/siemens.jpg" alt="">
+                                <img class="img-fluid" src="images/siemens.jpg" alt="">
                             </div>
                         </li>
                         <!--New Garden-->
@@ -187,7 +187,7 @@
                                     Responsible for the front of the house.
                                 </p>
                                 <br>
-                                <img class="image" src="images/restaurant.jpg" alt="">
+                                <img class="img-fluid" src="images/restaurant.jpg" alt="">
                             </div>
                         </li>
                     </ul>
@@ -213,7 +213,7 @@
                                     <br>- Leonhard Center Speaking Contest semi-finalist (Top 3%)
                                 </p>
                                 <br>
-                                <img class="image" src="images/grad.jpg" alt="">
+                                <img class="img-fluid" src="images/grad.jpg" alt="">
                             </div>
                         </li>
                         <!--GDSC-->
@@ -226,7 +226,7 @@
                                     Also provided year-long mentorship to members participating in the Google Solutions Challenge.
                                 </p>
                                 <br>
-                                <img class="image" src="images/gdsc.jpg" alt=""> 
+                                <img class="img-fluid" src="images/gdsc.jpg" alt=""> 
                             </div>
                         </li>
                     </ul>
