--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
                 </div>
             </div>
             <!--New Garden-->
-            <div class="row text-left align-items-stretch">
+            <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
-                    <img class="img-fluid h-100" src="images/newgarden.jpg" alt="">
+                    <img class="img-fluid" src="images/newgarden.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
                     <div class="proj-title">New Garden</div>
@@ -274,9 +274,9 @@
             <br>
             <br>
             <!--Loot Council-->
-            <div class="row text-left align-items-stretch">
+            <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
-                    <img class="img-fluid h-100" src="images/lootcouncil.jpg" alt="">
+                    <img class="img-fluid" src="images/lootcouncil.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
                     <div class="proj-title">Loot Council</div>
@@ -294,9 +294,9 @@
             <br>
             <br>
             <!--Romantic Hut-->
-            <div class="row text-left align-items-stretch">
+            <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
-                    <img class="img-fluid h-100" src="images/romantichut.jpg" alt="">
+                    <img class="img-fluid" src="images/romantichut.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
                     <div class="proj-title">Romantic Hut</div>
@@ -346,7 +346,7 @@
         <div class="container align-items-center justify-content-center">
           <div class="row text-center">
             <div class="col">
-              <p>Copyright &copy; 2023 JOHNNY JIANG. All rights reserved.</p>
+              <h5>Copyright &copy; 2023 JOHNNY JIANG. All rights reserved.</h5>
             </div>
           </div>
         </div>
