--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Johnny Jiang</title>
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico?v=2"  />
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico?v=2"/>
+    <link rel="stylesheet" href="assets/css/styles.css"/>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <link rel="stylesheet" href="assets/css/minimal.css"/>
     <script src="assets/js/pace.min.js"></script>
 
@@ -94,10 +94,10 @@
                 </div>
             </div>
             <div class="row text-left align-items-center">
-                <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
+                <div class="col-xs-12 col-lg-6">
                     <img class="img-fluid" src="images/about.jpg" alt="">
                 </div>
-                <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
+                <div class="col-xs-12 col-lg-6">
                     <p class="intro"><strong>Hello there!</strong> 
                         I'm Johnny and I tend to find myself in interesting situations. 
                         I love going on adventures and creating stories. 
@@ -153,9 +153,9 @@
                         </li>
                         <!--An Kang-->
                         <li>
-                            <time class="exp-date" data-aos="fade-right" data-aos-once="true"><span><b>May '22 - Present</b></span></time>
+                            <time class="exp-date"><span><b>May '22 - Present</b></span></time>
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
-                            <div class="exp-card" data-aos="fade-left" data-aos-once="true">
+                            <div class="exp-card">
                                 <h4><strong>An Kang Social Day Care</strong> | <em>Computer Technician</em></h4>
                                 <p>Resolving software and application issues for over 400 people.
                                     Overhauled the bookkeeping system to formulaic spreadsheets,
@@ -165,9 +165,9 @@
                         </li>
                         <!--Siemens-->
                         <li>
-                            <time class="exp-date" data-aos="fade-right" data-aos-once="true"><span><b>May '21 - Aug '21</b></span></time>
+                            <time class="exp-date"><span><b>May '21 - Aug '21</b></span></time>
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
-                            <div class="exp-card" data-aos="fade-left" data-aos-once="true">
+                            <div class="exp-card">
                                 <h4><strong>Siemens Digital Industries Software</strong> | <em>Software Engineer Intern</em></h4>
                                 <p>An ML / AI focused role. Utilized TensorFlow to classify sentences, ran tests for OpenAI API (ChatGPT),
                                     and researched the What-If-Tool for Explainable AI.
@@ -178,9 +178,9 @@
                         </li>
                         <!--New Garden-->
                         <li>
-                            <time class="exp-date" data-aos="fade-right" data-aos-once="true"><span><b>Jun '18 - May '21</b></span></time>
+                            <time class="exp-date"><span><b>Jun '18 - May '21</b></span></time>
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
-                            <div class="exp-card" data-aos="fade-left" data-aos-once="true">
+                            <div class="exp-card">
                                 <h4><strong>New Garden Chinese Restaurant</strong> | <em>Assistant (to the) Manager</em></h4>
                                 <p>
                                     Managed a staff team of 4 in food production and service for over 75 customers per day.
@@ -204,9 +204,9 @@
                         </li>
                         <!--Penn State-->
                         <li>
-                            <time class="exp-date" data-aos="fade-right" data-aos-once="true"><span><b>Aug '18 - May '22</b></span></time>
+                            <time class="exp-date"><span><b>Aug '18 - May '22</b></span></time>
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
-                            <div class="exp-card" data-aos="fade-left" data-aos-once="true">
+                            <div class="exp-card">
                                 <h4><strong>The Pennsylvania State University</strong></h4>
                                 <p>- Bachelor of Science in Computer Science
                                     <br>- 2019 Hackathon JPMorgan Sponsored Challenge Winner (900+ participants)
@@ -219,7 +219,7 @@
                         <!--GDSC-->
                         <li>
                             <div class="exp-icon"><i class="fa fa-plus"></i></div>
-                            <div class="exp-card" data-aos="fade-left" data-aos-once="true">
+                            <div class="exp-card">
                                 <h4><strong>Google Developer Student Club</strong> | <em>Technical Lead</em></h4>
                                 <p>
                                     Led a team of 5 in organizing biweekly workshops about GCP products.
@@ -255,10 +255,10 @@
             </div>
             <!--New Garden-->
             <div class="row text-left align-items-center">
-                <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
+                <div class="col-xs-12 col-lg-6">
                     <img class="img-fluid" src="images/newgarden.jpg" alt="">
                 </div>
-                <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
+                <div class="col-xs-12 col-lg-6">
                     <div class="proj-title">New Garden</div>
                     <div class="proj-desc">Restaurant Point of Sale System</div>
                     <p>
@@ -272,13 +272,13 @@
                 </div>
             </div>
             <br>
-            <br>
+            <div class="project-border"></div>
             <!--Loot Council-->
             <div class="row text-left align-items-center">
-                <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
+                <div class="col-xs-12 col-lg-6">
                     <img class="img-fluid" src="images/lootcouncil.jpg" alt="">
                 </div>
-                <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
+                <div class="col-xs-12 col-lg-6">
                     <div class="proj-title">Loot Council</div>
                     <div class="proj-desc">Web Scraper & Reward Allocator</div>
                     <p>
@@ -292,13 +292,13 @@
                 </div>
             </div>
             <br>
-            <br>
+            <div class="project-border"></div>
             <!--Romantic Hut-->
             <div class="row text-left align-items-center">
-                <div class="col-xs-12 col-lg-6" data-aos="fade-right" data-aos-once="true">
+                <div class="col-xs-12 col-lg-6">
                     <img class="img-fluid" src="images/romantichut.jpg" alt="">
                 </div>
-                <div class="col-xs-12 col-lg-6" data-aos="fade-left" data-aos-once="true">
+                <div class="col-xs-12 col-lg-6">
                     <div class="proj-title">Romantic Hut</div>
                     <div class="proj-desc">Local Business Website</div>
                     <p>
@@ -353,10 +353,6 @@
     </footer>
 
     <script src="assets/js/app.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
     <script src="https://kit.fontawesome.com/a8eb5cb089.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
