--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="johnny jiang, johnny, jiang, penn state, 
+        pennsylvania state university, pennsylvania, new york, front-end, 
+        back-end, web, website, computer science, software, developer, engineer,
+        Python, Java, Swift, HTML, CSS, Javascript, SQL, PostgreSQL">
+    <meta name="author" content="Johnny Jiang">
+    <meta name="description" content="Software Engineer">
     <title>Johnny Jiang</title>
 
     <link rel="icon" href="images/favicon.ico?"/>
