--- a/index.html
+++ b/index.html
@@ -235,6 +235,19 @@
                                 <img class="img-fluid" src="images/gdsc.jpg" alt=""> 
                             </div>
                         </li>
+                        <!--IM-->
+                        <li>
+                            <div class="exp-icon"><i class="fa fa-plus"></i></div>
+                            <div class="exp-card">
+                                <h4><strong>Penn State Competitive Sports</strong> | <em>Intramural Supervisor</em></h4>
+                                <p>
+                                    Led a team of 30 staff members to run a variety of intramural games.
+                                    Contributed to the launch of the LinkedIn Learning Program, accumulating 44,000 hours of total watch time.
+                                </p>
+                                <br>
+                                <img class="img-fluid" src="images/.jpg" alt=""> 
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -315,6 +328,26 @@
                         the Google Sheet that hold all the reservations.
                     </p>
                     <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/RomanticHut','_blank')">GitHub</button>
+                </div>
+            </div>
+            <br>
+            <div class="project-border"></div>
+            <!--Lunar Birthdays-->
+            <div class="row text-left align-items-center">
+                <div class="col-xs-12 col-lg-6">
+                    <img class="img-fluid" src="images/.jpg" alt="">
+                </div>
+                <div class="col-xs-12 col-lg-6">
+                    <div class="proj-title">Lunar Birthdays</div>
+                    <div class="proj-desc">Birthday Reminder & Converter</div>
+                    <p>
+                        Created a SwiftUI iOS app to save birthday profiles in core data
+                        and count down until the next. It will notify users of upcoming
+                        birthdays. The main idea is to help ABC's (American-born  Chinese)
+                        to help remember their family's birthdays since Lunar birthdays
+                        are never on the same day on Gregorian calendars.
+                    </p>
+                    <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/LunarBirthdays','_blank')">GitHub</button>
                 </div>
             </div>
         </div>
