--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
 </head>
 <body>
-    <!--Preloader-->
+    <!--Preloader
     <div id="overlay"></div>
+    -->
 
     <!--Navbar Section-->
     <div id="top"></div>
