--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@
                                 <h4><strong>Penn State Competitive Sports</strong> | <em>Intramural Supervisor</em></h4>
                                 <p>
                                     Led a team of 30 staff members to run a variety of intramural games.
-                                    Contributed to the launch of the LinkedIn Learning Program, accumulating 44,000 hours of total watch time.
+                                    Also contributed to the launch of the LinkedIn Learning Program, 
+                                    which accumulated over 44,000 hours of total watch time.
                                 </p>
                                 <br>
                                 <img class="img-fluid" src="images/.jpg" alt=""> 
