--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Software Engineer">
     <title>Johnny Jiang</title>
 
-    <link rel="icon" href="images/favicon.ico?"/>
+    <link rel="icon" href="assets/images/favicon.ico?"/>
     <link rel="stylesheet" href="assets/css/styles.css"/>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
@@ -64,7 +64,7 @@
 
     <!--Landing Section-->
     <section class="main">
-        <img class="background-image" src="images/landing.jpg" alt="">
+        <img class="background-image" src="assets/images/landing.jpg" alt="">
         <div class="container d-flex flex-column align-items-center justify-content-center h-100">
             <div class="row text-center align-items-center">
                 <div class="col">
@@ -101,8 +101,8 @@
                 </div>
             </div>
             <div class="row text-left align-items-center">
-                <div class="col-xs-12 col-lg-6">
-                    <img class="img-fluid" src="images/about.jpg" alt="">
+                <div class="col-xs-12 col-lg-6 text-right">
+                    <img class="abt-img" src="assets/images/about.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
                     <p class="intro"><strong>Hello there!</strong> 
@@ -180,7 +180,7 @@
                                     and researched the What-If-Tool for Explainable AI.
                                 </p>
                                 <br>
-                                <img class="img-fluid" src="images/siemens.jpg" alt="">
+                                <img class="img-fluid" src="assets/images/siemens.jpg" alt="">
                             </div>
                         </li>
                         <!--New Garden-->
@@ -194,7 +194,7 @@
                                     Responsible for the front of the house.
                                 </p>
                                 <br>
-                                <img class="img-fluid" src="images/restaurant.jpg" alt="">
+                                <img class="img-fluid" src="assets/images/restaurant.jpg" alt="">
                             </div>
                         </li>
                     </ul>
@@ -220,7 +220,7 @@
                                     <br>- Leonhard Center Speaking Contest semi-finalist (Top 3%)
                                 </p>
                                 <br>
-                                <img class="img-fluid" src="images/grad.jpg" alt="">
+                                <img class="img-fluid" src="assets/images/grad.jpg" alt="">
                             </div>
                         </li>
                         <!--GDSC-->
@@ -233,7 +233,7 @@
                                     Also provided year-long mentorship to members participating in the Google Solutions Challenge.
                                 </p>
                                 <br>
-                                <img class="img-fluid" src="images/gdsc.jpg" alt=""> 
+                                <img class="img-fluid" src="assets/images/gdsc.jpg" alt=""> 
                             </div>
                         </li>
                         <!--IM-->
@@ -247,7 +247,7 @@
                                     which accumulated over 44,000 hours of total watch time.
                                 </p>
                                 <br>
-                                <img class="img-fluid" src="images/.jpg" alt=""> 
+                                <img class="img-fluid" src="assets/images/.jpg" alt=""> 
                             </div>
                         </li>
                     </ul>
@@ -277,7 +277,7 @@
             <!--New Garden-->
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6">
-                    <img class="img-fluid" src="images/newgarden.jpg" alt="">
+                    <img class="img-fluid" src="assets/images/newgarden.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
                     <div class="proj-title">New Garden</div>
@@ -293,11 +293,11 @@
                 </div>
             </div>
             <br>
-            <div class="project-border"></div>
+            <br>
             <!--Loot Council-->
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6">
-                    <img class="img-fluid" src="images/lootcouncil.jpg" alt="">
+                    <img class="img-fluid" src="assets/images/lootcouncil.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
                     <div class="proj-title">Loot Council</div>
@@ -313,11 +313,11 @@
                 </div>
             </div>
             <br>
-            <div class="project-border"></div>
+            <br>
             <!--Romantic Hut-->
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6">
-                    <img class="img-fluid" src="images/romantichut.jpg" alt="">
+                    <img class="img-fluid" src="assets/images/romantichut.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
                     <div class="proj-title">Romantic Hut</div>
@@ -333,14 +333,14 @@
                 </div>
             </div>
             <br>
-            <div class="project-border"></div>
+            <br>
             <!--Lunar Birthdays-->
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6">
-                    <img class="img-fluid" src="images/.jpg" alt="">
+                    <img class="img-fluid" src="assets/images/swift.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
-                    <div class="proj-title">Lunar Birthdays</div>
+                    <div class="proj-title">Lunar Birthdays (In progress)</div>
                     <div class="proj-desc">Birthday Reminder & Converter</div>
                     <p>
                         Created a SwiftUI iOS app to save birthday profiles in core data
@@ -384,13 +384,31 @@
 
     <!--Footer Section-->
     <footer>
+        <br>
         <div class="container align-items-center justify-content-center">
-          <div class="row text-center">
-            <div class="col">
-              <h5>Copyright &copy; 2023 JOHNNY JIANG. All rights reserved.</h5>
+            <div class="row text-center align-items-center">
+                <div class="col">
+                    <ul class="list-inline banner-social-buttons">
+                        <li class="list-inline-item">
+                            <a id="linkedin" href="https://www.linkedin.com/in/johnnyj2608" target="_blank">
+                                <i class="fa fa-linkedin"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a id="github" href="https://github.com/johnnyj2608" target="_blank">
+                                <i class="fa fa-github"></i>
+                            </a>
+                        </li>
+                      </ul>
+                </div>
             </div>
-          </div>
+            <div class="row text-center foot">
+                <div class="col">
+                <h5>Copyright &copy; 2023 JOHNNY JIANG. All rights reserved.</h5>
+                </div>
+            </div>
         </div>
+        <br>
     </footer>
 
     <script src="assets/js/app.js"></script>
