Fixed about image on mobile

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6 text-right">
-                    <img class="abt-img" src="assets/images/about.jpg" alt="">
+                    <img class="abt-img w-100" src="assets/images/about.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
                     <p class="intro"><strong>Hello there!</strong> 
