--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     -->
 
     <!--Navbar Section-->
-    <div id="top"></div>
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+        <div id="top"></div>
         <div class="container-fluid">
             <a class="navbar-brand nav-link" onclick="toggleNavbar('top')">JOHNNY JIANG</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -91,8 +91,8 @@
     </section>
     
     <!--About Section-->
-    <div id="about" class="anchors"></div>
     <section class="white">
+        <div id="about" class="anchors"></div>
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
@@ -101,10 +101,10 @@
                 </div>
             </div>
             <div class="row text-left align-items-center">
-                <div class="col-xs-12 col-lg-6 text-right">
-                    <img class="abt-img w-100" src="assets/images/about.jpg" alt="">
+                <div class="col-sm-4 text-right">
+                    <img class="abt-img" src="assets/images/about.jpg" alt="">
                 </div>
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-sm-8">
                     <p class="intro"><strong>Hello there!</strong> 
                         I'm Johnny and I tend to find myself in interesting situations. 
                         I love going on adventures and creating stories. 
@@ -135,8 +135,8 @@
     </section>
 
     <!--Exprience Section-->
-    <div id="experience" class="anchors"></div>
     <section class="grey">
+        <div id="experience" class="anchors"></div>
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
@@ -253,8 +253,8 @@
     </section>
 
     <!--Projects Section-->
-    <div id="projects" class="anchors"></div>
     <section class="white">
+        <div id="projects" class="anchors"></div>
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
@@ -352,8 +352,8 @@
     </section>
 
     <!--Resume Section-->
-    <div id="resume" class="anchors"></div>
     <section class="grey">
+        <div id="resume" class="anchors"></div>
         <div class="container">
             <div class="row text-center align-items-center">
                 <div class="col">
