--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <div class="row text-left align-items-center">
-                <div class="col-sm-4 text-right">
+                <div class="col-sm-4 text-center">
                     <img class="abt-img" src="assets/images/about.jpg" alt="">
                 </div>
                 <div class="col-sm-8">
