--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <link rel="stylesheet" href="assets/css/minimal.css"/>
+    <link rel="stylesheet" href="assets/css/animate.css"/>
     <script src="assets/js/pace.min.js"></script>
 
     <!-- Google tag (gtag.js) -->
@@ -68,11 +69,11 @@
         <div class="container d-flex flex-column align-items-center justify-content-center h-100">
             <div class="row text-center align-items-center">
                 <div class="col">
-                    <h1>Johnny Jiang</h1>
-                    <h2>Software Engineer</h2>
+                    <h1 class="animated fadeInDown delay-05s">Johnny Jiang</h1>
+                    <h2 class="animated bounceIn delay-1s">Software Engineer</h2>
                 </div>
             </div>
-            <div class="row text-center align-items-center">
+            <div class="row text-center align-items-center animated fadeIn delay-2s">
                 <div class="col social-icons">
                     <a href="https://www.linkedin.com/in/johnnyj2608" target="_blank" proj-title="LinkedIn Profile" class="icon-button linkedin">
                         <i class="icon-linkedin fa fa-linkedin"></i>
@@ -85,7 +86,7 @@
                 </div>
             </div>
         </div>
-        <div class="arrow bounce">
+        <div class="arrow bounce delay-4s">
             <a onclick="jump('about')"><i class="fa-solid fa-angles-down"></i></a>
         </div>
     </section>
