--- a/index.html
+++ b/index.html
@@ -162,40 +162,52 @@
                         <!--An Kang-->
                         <li>
                             <time class="exp-date"><span><b>May '22 - Present</b></span></time>
-                            <div class="exp-icon"><i class="fa fa-plus"></i></div>
+                            <button class="exp-icon-button exp-icon">
+                                <i class="fa fa-minus"></i>
+                            </button>
                             <div class="exp-card">
                                 <h4><strong>An Kang Social Day Care</strong> | <em>Computer Technician</em></h4>
+                                <div class="exp-collapse-content">
                                 <p>Resolving software and application issues for over 400 people.
                                     Overhauled the bookkeeping system to formulaic spreadsheets,
                                     saving 7.5 hours biweekly.
                                 </p>
+                                </div>
                             </div>
                         </li>
                         <!--Siemens-->
                         <li>
                             <time class="exp-date"><span><b>May '21 - Aug '21</b></span></time>
-                            <div class="exp-icon"><i class="fa fa-plus"></i></div>
+                            <button class="exp-icon-button exp-icon">
+                                <i class="fa fa-minus"></i>
+                            </button>
                             <div class="exp-card">
                                 <h4><strong>Siemens Digital Industries Software</strong> | <em>Software Engineer Intern</em></h4>
-                                <p>An ML / AI focused role. Utilized TensorFlow to classify sentences, ran tests for OpenAI API (ChatGPT),
-                                    and researched the What-If-Tool for Explainable AI.
-                                </p>
-                                <br>
-                                <img class="img-fluid" src="assets/images/siemens.jpg" alt="">
+                                <div class="exp-collapse-content">
+                                    <p>An ML / AI focused role. Utilized TensorFlow to classify sentences, ran tests for OpenAI API (ChatGPT),
+                                        and researched the What-If-Tool for Explainable AI.
+                                    </p>
+                                    <br>
+                                    <img class="img-fluid" src="assets/images/siemens.jpg" alt="">
+                                </div>
                             </div>
                         </li>
                         <!--New Garden-->
                         <li>
                             <time class="exp-date"><span><b>Jun '18 - May '21</b></span></time>
-                            <div class="exp-icon"><i class="fa fa-plus"></i></div>
+                            <button class="exp-icon-button exp-icon">
+                                <i class="fa fa-plus"></i>
+                            </button>
                             <div class="exp-card">
                                 <h4><strong>New Garden Chinese Restaurant</strong> | <em>Assistant (to the) Manager</em></h4>
-                                <p>
-                                    Managed a staff team of 4 in food production and service for over 75 customers per day.
-                                    Responsible for the front of the house.
-                                </p>
-                                <br>
-                                <img class="img-fluid" src="assets/images/restaurant.jpg" alt="">
+                                <div class="exp-collapse-content collapsed">
+                                    <p>
+                                        Managed a staff team of 4 in food production and service for over 75 customers per day.
+                                        Responsible for the front of the house.
+                                    </p>
+                                    <br>
+                                    <img class="img-fluid" src="assets/images/restaurant.jpg" alt="">
+                                </div>
                             </div>
                         </li>
                     </ul>
@@ -209,42 +221,54 @@
                         <!--Penn State-->
                         <li>
                             <time class="exp-date"><span><b>Aug '18 - May '22</b></span></time>
-                            <div class="exp-icon"><i class="fa fa-plus"></i></div>
+                            <button class="exp-icon-button exp-icon">
+                                <i class="fa fa-minus"></i>
+                            </button>
                             <div class="exp-card">
                                 <h4><strong>The Pennsylvania State University</strong></h4>
-                                <p>- Bachelor of Science in Computer Science
-                                    <br>- 2019 Hackathon JPMorgan Sponsored Challenge Winner (900+ participants)
-                                    <br>- Leonhard Center Speaking Contest semi-finalist (Top 3%)
-                                </p>
-                                <br>
-                                <img class="img-fluid" src="assets/images/grad.jpg" alt="">
+                                <div class="exp-collapse-content">
+                                    <p>- Bachelor of Science in Computer Science
+                                        <br>- 2019 Hackathon JPMorgan Sponsored Challenge Winner (900+ participants)
+                                        <br>- Leonhard Center Speaking Contest semi-finalist (Top 3%)
+                                    </p>
+                                    <br>
+                                    <img class="img-fluid" src="assets/images/grad.jpg" alt="">
+                                </div>
                             </div>
                         </li>
                         <!--GDSC-->
                         <li>
-                            <div class="exp-icon"><i class="fa fa-plus"></i></div>
+                            <button class="exp-icon-button exp-icon">
+                                <i class="fa fa-minus"></i>
+                            </button>
                             <div class="exp-card">
                                 <h4><strong>Google Developer Student Club</strong> | <em>Technical Lead</em></h4>
-                                <p>
-                                    Led a team of 5 in organizing biweekly workshops about GCP products.
-                                    Also provided year-long mentorship to members participating in the Google Solutions Challenge.
-                                </p>
-                                <br>
-                                <img class="img-fluid" src="assets/images/gdsc.jpg" alt=""> 
+                                <div class="exp-collapse-content">
+                                    <p>
+                                        Led a team of 5 in organizing biweekly workshops about GCP products.
+                                        Also provided year-long mentorship to members participating in the Google Solutions Challenge.
+                                    </p>
+                                    <br>
+                                    <img class="img-fluid" src="assets/images/gdsc.jpg" alt=""> 
+                                </div>
                             </div>
                         </li>
                         <!--IM-->
                         <li>
-                            <div class="exp-icon"><i class="fa fa-plus"></i></div>
+                            <button class="exp-icon-button exp-icon">
+                                <i class="fa fa-minus"></i>
+                            </button>
                             <div class="exp-card">
                                 <h4><strong>Penn State Competitive Sports</strong> | <em>Intramural Supervisor</em></h4>
-                                <p>
-                                    Led a team of 30 staff members to run a variety of intramural games.
-                                    Also contributed to the launch of the LinkedIn Learning Program, 
-                                    which accumulated over 44,000 hours of total watch time.
-                                </p>
-                                <br>
-                                <img class="img-fluid" src="assets/images/.jpg" alt=""> 
+                                <div class="exp-collapse-content">
+                                    <p>
+                                        Led a team of 30 staff members to run a variety of intramural games.
+                                        Also contributed to the launch of the LinkedIn Learning Program, 
+                                        which accumulated over 44,000 hours of total watch time.
+                                    </p>
+                                    <br>
+                                    <img class="img-fluid" src="assets/images/.jpg" alt=""> 
+                                </div>
                             </div>
                         </li>
                     </ul>
@@ -412,6 +436,6 @@
     <script src="https://kit.fontawesome.com/a8eb5cb089.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>   
 </body>
 </html>
