Fixed bouncing arrow

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </div>
-        <div class="arrow bounce delay-4s">
+        <div class="arrow bounces">
             <a onclick="jump('about')"><i class="fa-solid fa-angles-down"></i></a>
         </div>
     </section>
