Revised about info

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                     <p>
                         <strong>Capabilities:</strong>
                         <br>- Eat countless packets of Mi Goreng instant noodles
-                        <br>- Speak broken Mandarin and Fuzhouneze to my family
-                        <br>- Speedrun any task with Mario Kart Star Music 10 Hrs
+                        <br>- Carry any amount of groceries in a single trip
+                        <br>- Speedrun any task with Mario Kart Star Music 10 hours
                     </p>
                     <p>
                         <strong>Accomplishments:</strong>
@@ -125,9 +125,9 @@
                     </p>
                     <p>
                         <strong>Misdemeanors:</strong>
-                        <br>- Says "Close" the light instead of "Turn off" the light
                         <br>- Doesn't know one single fact about bears attacks
                         <br>- Enjoys chewing bubble gum but can't blow bubbles
+                        <br>- Speaks broken Mandarin and Fuzhouneze to my family
                         <br>- Has a confusing one-word, all-lowercase WiFi password
                     </p>
                 </div>
