Updated fun facts

--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
                         <strong>Accomplishments:</strong>
                         <br>- Survived two separate graduations in pouring rain
                         <br>- Crowned the Four Square King in elementary school
-                        <br>- Promoted to Assistant (to the) Manager of a restaurant
+                        <br>- Worked as an Assistant (to the) Manager of a restaurant
                     </p>
                     <p>
                         <strong>Misdemeanors:</strong>
                         <br>- Doesn't know one single fact about bears attacks
                         <br>- Enjoys chewing bubble gum but can't blow bubbles
-                        <br>- Speaks broken Mandarin and Fuzhouneze to my family
+                        <br>- Claims to be trilingual but still uses translate apps
                         <br>- Has a confusing one-word, all-lowercase WiFi password
                     </p>
                 </div>
