--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
             <div class="row text-center align-items-top">
                 <div class="col-xs-12 col-lg-6 resume">
                   <h4>Check out my resume!</h4>
-                  <button class="btn" onclick=" window.open('johnnyjiang-resume.pdf')">Resume</button>
+                  <button class="btn" onclick=" window.open('assets/johnnyjiang-resume.pdf')">Resume</button>
+                  <p>(More detail for each experience)</p>
                 </div>
                 <div class="col-xs-12 col-lg-6 resume">
                     <h4>Connect with me!</h4>
