Updated lunar birthdays project

--- a/index.html
+++ b/index.html
@@ -320,10 +320,10 @@
             <!--Lunar Birthdays-->
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6">
-                    <img class="img-fluid" src="assets/images/swift.jpg" alt="">
+                    <img class="img-fluid" src="assets/images/lunarbirthdays.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
-                    <div class="proj-title">Lunar Birthdays (In progress)</div>
+                    <div class="proj-title">Lunar Birthdays</div>
                     <div class="proj-desc">Birthday Reminder & Converter</div>
                     <p>
                         Created a SwiftUI iOS app to save birthday profiles in core data
